fix ui problems